recursion.logo.spiral.Spiral.scala.error
Erreur de compilation :
Spiral:2: error: illegal start of statement
  match steps {
  ^