recursion.logo.spiral.Spiral.scala.code
def spiral(steps:Int, angle:Int, length:Int, increment:Int)    {
  match steps {
  	case 0 => avance(0)
    case _ => avance(length);
    gauche(90);
  	spiral(steps-1,90,length+increment,increment)
  }
}